# pytdlib

./: .gitignore  README.md  pyproject.toml
compiler/: cli.py  compiler.py  parser.py  templates.py  types.py
pytdlib/: __init__.py  client.py  client_manager.py  exceptions.py  json_hooks.py  library_executor.py  log.py  utils.py  wrapper.py
pytdlib/types/raw/: accent_color.py  accent_color.pyi  accept_call.py  accept_call.pyi  accept_terms_of_service.py  accept_terms_of_service.pyi  accepted_gift_types.py  accepted_gift_types.pyi  account_info.py  account_info.pyi  account_ttl.py  account_ttl.pyi  activate_story_stealth_mode.py  activate_story_stealth_mode.pyi  add_bot_media_preview.py  add_bot_media_preview.pyi  add_chat_folder_by_invite_link.py  add_chat_folder_by_invite_link.pyi  add_chat_member.py  add_chat_member.pyi  add_chat_members.py  add_chat_members.pyi  add_chat_to_list.py  add_chat_to_list.pyi  add_contact.py  add_contact.pyi  add_custom_server_language_pack.py  add_custom_server_language_pack.pyi  add_favorite_sticker.py  add_favorite_sticker.pyi  add_file_to_downloads.py  add_file_to_downloads.pyi  add_local_message.py  add_local_message.pyi  add_log_message.py  add_log_message.pyi  add_message_reaction.py  add_message_reaction.pyi  add_network_statistics.py  add_network_statistics.pyi  (+4964 more)
tests/: test_decoder.py  test_wrapper.py
tests/compiler/: test_combiner.py  test_parser.py
