[project]
name = "pytdlib"
version = "0.1.0"
description = "Async telegram library for work with tdlib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = ["pytest>=8.4.0", "requests>=2.32.4"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["pytdlib"]
